# celeritas

./: .gitignore  env.example  justfile  pyproject.toml
app/: db.py  logging_conf.py  main.py  models.py
app/api/: main.py  router.py
app/api/routes/: analytics.py  chat.py  conversations.py  documents.py
app/core/: agent.py  auth.py  config.py  document.py
docs/: ARCHITECTURE.md  CELERITAS_TASK.md  DESIGN.md
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AnalyticsPage.tsx  ChatPage.tsx
